@@ -1,6 +1,9 @@
 
 Drupal 7.23, xxxx-xx-xx (development version)
 -----------------------
+- Added protection to cache_clear_all() to ensure that non-cache tables cannot
+  be truncated (API addition: a new isValidBin() method has been added to the
+  default database cache implementation).
 - Changed the default .htaccess file to support HTTP authorization in CGI
   environments.
 - Changed the password reset form to pre-fill the username when requested via a
